Finished Naruto demo app v.0.1.0

--- a/app/src/main/res/values/data_naruto.xml
+++ b/app/src/main/res/values/data_naruto.xml
@@ -8,9 +8,9 @@
     </string-array>
 
     <string-array name="data_detail">
-        <item>Kakashi Hatake</item>
-        <item>Minato Namikaze</item>
-        <item>Naruto Uzumaki</item>
-        <item>Sasuke Uchiha</item>
+        <item>ฮาตาเกะ คาคาชิ (ญี่ปุ่น: はがねコテツ ?) อดีตเคยเข้าสังกัดกองนินจาอันบุ ผมสีขาวของคาคาชิได้รับสืบทอดมาจากพ่อของเขา (ฮาตาเกะ ซาคุโมะ) ได้รับเนตรวงแหวนซึ่งได้รับมาจาก อุจิวะ โอบิโตะ (บุคคลที่ใส่หน้ากากที่คอยอยู่เบื้องหลังกลุ่มแสงอุษา หรือ โทบิ นั่นเอง) เพื่อนร่วมทีม มอบให้ก่อนที่จะเสียชีวิต เป็นโจนินฝีมือดีที่ได้รับการกล่าวขานทั้งในหน่วยลับและหน่วยราก ชอบอ่านอจึ๊ยสววรค์รำไรมาก</item>
+        <item>โฮคาเงะรุ่นที่ 4 (ญี่ปุ่น: なみかぜ　ミナト ?) ชื่อ นามิคาเสะ มินาโตะ เขาเกิดมาพร้อมกับพรสวรรค์ต่างๆ มากมาย และได้ชื่อว่าเป็นนินจาที่เก่งที่สุดในประวัติศาสตร์ของหมู่บ้านโคโนฮะ ฉายา "ประกายแสงสีเหลืองแห่งโคโนะฮะ" ช่วงแรกมินาโตะได้ถูกคิดว่าเป็นเด็กในคำทำนาย มินาโตะใช้คาถามิติโดยลงอัขระไว้ที่คุไน เป็นศิษย์เอกของ 1 ใน 3 นินจาในตำนานจิไรยะและเป็นอาจารย์ของคาคาชิ ริน และโอบิโตะ เนื่องจากสีผมที่โดดเด่นคือเหลืองทอง และเป็นผู้ที่มีความว่องไวสูงมาก รวมถึงฝีมือที่ร้ายกาจจนมีชื่อเสียงเลื่องลือในหมู่นินจาทุกแคว้น ซึ่งเป็นพ่อของนารูโตะ</item>
+        <item>อุซึมากิ นารูโตะ (ญี่ปุ่น: うすまき　ナルト ?) เริ่มปรากฏในมังงะบทที่ 1 และอะนิเมะ ตอนที่ 1 เกิดในวันที่ 10 ตุลาคม เลือดกรุ๊ปบี มีพ่อชื่อ นามิคาเสะ มินาโตะ (โฮคาเงะรุ่นที่ 4) แม่ชื่อ อุซึมากิ คุชินะ พ่ออุปถัมภ์ชื่อ จิไรยะ นารูโตะเป็นนินจาของหมู่บ้านโคโนฮะ มีชีวิตที่น่าสงสารในวัยเด็ก เป็นผู้ที่ถูกผนึกจิ้งจอกเก้าหางใว้ในท้องโดยโฮคาเงะรุ่น ที่ 4 พ่อของตน นารูโตะมีนิสัยร่าเริง รักสนุก นอกจากนี้ยังเป็นศิษย์ของหนึ่งในสามนินจาในตำนาน "จิไรยะ" นารูโตะแอบชอบซากุระซึ่งเป็นเพื่อนร่วมทีมและนารูโตะก็ได้สัญญากับตัวเองเอาไว้ว่า ฉันจะต้องเป็นโฮคาเงะให้ได้ แล้วหลังจากจบสงครามนินจาลงนารูโตะได้ทำตามความฝันจนได้เป็น "โฮคาเงะรุ่นที่7" และได้มีลูกกับฮิวงะ ฮินาตะ 2 คน คือ อุซึมากิ โบรูโตะ กับ อุซึมากิ ฮิมาวาริ</item>
+        <item>อุจิวะ ซาสึเกะ (ญี่ปุ่น: うちは サスケ ?) เริ่มปรากฏในมังงะบทที่ 3 และอะนิเมะตอนที่ 1 เกิดในวันที่ 23 กรกฎาคม เลือดกรุ๊ปเอบี มีพ่อชื่อ อุจิวะ ฟุงะกุ แม่ชื่อ อุจิวะ มิโกโตะ พี่ชายชื่อ อุจิวะ อิทาจิ เป็นทายาทคนสุดท้ายของตระกูลอุจิวะ เป็นผู้มีความสามารถในการใช้เนตรวงแหวน หลังจากการที่โดนพี่ชายล้างตระกูลเพื่อให้ซาสึเกะแข็งแกร่งขึ้นปัจจุบันได้รับเนตรวงแหวนจากอุจิวะ อิทาจิจนเป็นเนตรวงแหวนกระจกเงาหมื่นบุปผานิรันดร์ เป็นคนฆ่าโอโรจิมารุ แต่ก็เรียกโอโรจิมารุออกมาอีกครั้งจากอักขระของอังโกะ และภายหลัง อุจิวะ ซาสึเกะ ก็ได้เข้าร่วมกลุ่มแสงอุษา และในตอนหลังนั้น เมื่อสงครามโลกนินจาครั้งที่ 4 เกิดขึ้น อุจิวะ ซาสึเกะ ได้ร่วมสู้กับนารูโตะและเพื่อนๆ เพื่อกำจัด อุจิวะ มาดาระ และ คางูยะ จนสำเร็จ แล้วได้ยอมรับความสามารถของนารูโตะ และออกท่องเที่ยว แต่เขาก็มีลูกกับ ฮารุโนะ ซากุระ 1 คน คือ อุจิวะ ซาราดะ</item>
     </string-array>
 </resources>
